// ==========================================================================
// Copyright (C) 2022 by NoSuch Company.
// All rights reserved.
// May be used only in accordance with a valid Source Code License Agreement.
// 
// Last change: 27/03/2022 @ 20:37
// ==========================================================================

namespace NoSuchCompany.Games.SuperMario.Constants
{
    internal static class Animations
    {
        public static string IsJumping = nameof(IsJumping);
        
        public static string IsDead = nameof(IsDead);
        
        public static string Speed = nameof(Speed);
        
        public static string IsActive = nameof(IsActive);
    }
}